# repo-wiki-agent

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.apm/: Implementation_Plan.md  metadata.json
.apm/Memory/: Memory_Root.md
.apm/Task_Assignments/: Phase_01_Foundation_Security_and_Scanner_Contracts.md  Phase_02_Local_Knowledge_Substrate_and_Retrieval_Pipeline.md  Phase_03_Documentation_Generation_and_Command_Orchestration.md  Phase_04_Adapter_Output_and_Verification.md  Phase_05_Pilot_Acceptance_CI_Packaging_and_Release_Gate.md  Phase_06_Information_Architecture_and_Document_Contract_Recovery.md  Phase_07_Domain_Centered_Content_Generation.md  Phase_08_Quality_Gates_and_Qoder_Baseline_Regression.md  Phase_09_Output_Contract_and_Navigation_Hardening.md  Phase_10_Narrative_and_Aggregation_Intelligence.md  Phase_11_Acceptance_and_Baseline_Governance_Hardening.md  Phase_12_SQLite_First_Local_Knowledge_Runtime.md  Phase_13_Atlas_Cutover_and_Hard_Gate_Clearance.md  Phase_14_External_Baseline_Calibration_and_Benchmark_Governance.md  Phase_15_Visual_Knowledge_Experience_and_IDE_Integration.md  Phase_16_Qoder_Replacement_Cutover_and_Release_Gate.md  Phase_17_Evidence_Integrity_and_CI_Gate_Repair.md  Phase_18_Transitional_Quality_Uplift.md  Phase_19_Viewer_and_IDE_Hardening.md  Phase_20_Transitional_Release_Candidate_and_Strict_Gap_Plan.md  Phase_21_LLM_Provider_Abstraction_and_Secure_Configuration.md  Phase_22_Qoder_like_Wiki_Planner_and_Chinese_Information_Architecture.md  Phase_23_Evidence_Builder_with_File_and_Line_Citations.md  Phase_24_LLM_Page_Composer_and_Qoder_style_Markdown_Articles.md  Phase_25_API_Reference_Specialization.md  Phase_26_Data_Model_and_Database_Architecture_Specialization.md  Phase_27_Qoder_compatible_Output_Layout_and_IDE_Runtime.md  Phase_28_Generation_Orchestration_Cost_Control_and_Incremental_Update.md  Phase_29_Quality_Governance_and_Qoder_Parity_Benchmark.md  Phase_30_Replacement_Candidate_Release_and_Documentation.md  Phase_31_Strict_Gate_Closure_and_Freshness_Reliability.md  Phase_32_Qoder_style_Information_Architecture_Deepening.md  Phase_33_Evidence_Ranking_and_Hallucination_Control.md  Phase_34_LLM_Composer_Quality_Loop.md  Phase_35_Replacement_Candidate_Acceptance.md  README.md
.claude/: CLAUDE.md  settings.json
.claude/commands/: apm-3-initiate-implementation.md  apm-7-delegate-research.md  apm-8-delegate-debug.md
.codex/: config.toml  hooks.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  (+2 more)
.opencode/: opencode.json
.tmp/: ai_api_atlas_repo_wiki.yaml
docs/: 00-overview.md  01-architecture.md  03-module-map.md  04-api-contracts.md  05-data-model.md  AI_API_Atlas_repo_wiki_gap_analysis.md  mvp.md  qoder-repo-wiki-design-analysis.md  qoder-repo-wiki-sqlite-analysis.md  repo-wiki-detailed-design.md  repo-wiki-generator-plan-v2.md  repo-wiki-information-architecture-standard.md  repo-wiki-phase-06-08-review.md  repo-wiki-phase-09-12-audit-atlas-comparison-and-phase-13-plan.md  repo-wiki-phase-09-12-roadmap.md  repo-wiki-phase-14-16-review-and-phase-17-20-plan.md  repo-wiki-qoder-gap-task-plan.md  wiki-source-code-and-docs-intelligence-plan.md  wiki-systematic-construction-master-plan.md
repo_wiki/: __init__.py  cli.py  main.py
repo_wiki.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: pilot_acceptance.py  qoder_baseline_comparison.py  qoder_benchmark_matrix.py  qoder_fixture_ingestion.py  qoder_governance_dashboard.py  readiness_report.py
templates/: task-catalog.yaml.j2
tests/: test_api_aggregator.py  test_api_flow_diagrams.py  test_api_inventory.py  test_api_quality_verifier.py  test_api_topic_planner.py  test_article_skeleton.py  test_atlas_parity_runner.py  test_auth_error_generator.py  test_baseline_comparator.py  test_benchmark_matrix.py  test_citation_renderer.py  test_citation_verifier.py  test_cli_config_doctor.py  test_cli_packaging_smoke.py  test_cli_update.py  test_content_layout_writer.py  test_cost_estimator.py  test_dashboard_export.py  test_data_model_aggregator.py  test_data_model_quality_verifier.py  test_data_model_topic_planner.py  test_data_models.py  test_database_migrations.py  test_docs_examples.py  test_domain_classifier.py  test_entity_relationship_composer.py  test_eval_layout.py  test_eval_manifest.py  test_evidence_ranking.py  test_evidence_schema.py  test_fixture_ingestion.py  test_generation_scheduler.py  test_generation_state_machine.py  test_golden_fixtures.py  test_golden_qoder_like_fixture.py  test_governance_dashboard.py  test_governance_regression.py  test_llm_assisted_planner.py  test_llm_budget.py  test_llm_config.py  (+49 more)
(+374 files in other folders)
