[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repo-wiki"
version = "0.1.0"
description = "Local-first repository wiki generator MVP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7",
  "PyYAML>=6.0",
  "rich>=13.7",
  "typer>=0.12",
  "pathspec>=0.12",
  "httpx>=0.27",
  "python-dotenv>=1.0",
  "pytest-asyncio>=1.3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
]

[project.scripts]
repo-wiki = "repo_wiki.cli:app"

# Explicit package discovery - only include repo_wiki package
# Keeps ai, templates, extensions, scripts out of installed package
[tool.setuptools.packages.find]
where = ["."]
include = ["repo_wiki*"]
exclude = ["tests*", "scripts*", "ci*", "docs*", "templates*", "extensions*", "ai*"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
asyncio_default_fixture_loop_scope = "function"
