[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repo-wiki"
version = "0.1.0"
description = "Local-first repository wiki generator MVP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7",
  "PyYAML>=6.0",
  "rich>=13.7",
  "typer>=0.12",
  "pathspec>=0.12",
  "httpx>=0.27",
  "python-dotenv>=1.0",
  "pytest-asyncio>=1.3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=4.1",
  "ruff>=0.1",
  "mypy>=1.8",
]

[project.scripts]
repo-wiki = "repo_wiki.cli:app"

# Explicit package discovery - only include repo_wiki package
# Keeps ai, templates, extensions, scripts out of installed package
[tool.setuptools.packages.find]
where = ["."]
include = ["repo_wiki*"]
exclude = ["tests*", "scripts*", "ci*", "docs*", "templates*", "extensions*", "ai*"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = [
    "E501",  # line length handled by formatter
    "F841",  # local variable assigned but never used
    "B007",  # loop control variable not used
    "B008",  # function call in argument defaults (typer style)
    "C416",  # unnecessary list comprehension
    "B904",  # raise in except without from
    "N801",  # class name convention
    "SIM108",  # ternary operator suggestion
    "N802",  # function name convention
    "SIM118",  # key in dict.keys()
    "E712",  # comparison to True should be cond
    "F811",  # redefinition of unused
    "E741",  # ambiguous variable name
    "C401",  # unneeded import from typing
    "F821",  # undefined name
    "E402",  # module level import not at top
    "N806",  # argument name should be lowercase
    "C414",  # set() argument is not a list
    "N818",  # exception variable should end with _exc
    "F601",  # dictionary key repeated
    "B023",  # function redefinition
]

[tool.coverage.run]
source = ["repo_wiki"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
